--- a/학습/생성자의상속.md
+++ b/학습/생성자의상속.md
@@ -1,3 +1,96 @@
+### 🌱 먼저, 생성자가 뭐더라?
+클래스를 만들 때 자동으로 호출되는 함수죠.  
+예: `Parent(int x)`는 객체를 만들면서 `x` 값을 초기화해요.
+
+---
+
+### 🧬 이 코드에서 일어나는 일
+
+```cpp
+class Parent {
+protected:    
+    int x;
+public:
+    Parent(int x) { this->x = x;}
+};
+```
+
+- `Parent` 클래스는 정수 하나를 받아서 `x`에 저장해요.
+
+---
+
+```cpp
+class Child : public Parent {
+public:
+    using Parent::Parent;
+    void Pr(){ std::cout << x << '\n'; }
+};
+```
+
+- `Child` 클래스는 `Parent`를 **상속**했는데,
+- `using Parent::Parent;`라는 한 줄 덕분에 **Parent의 생성자도 같이 물려받아요!**
+
+이 말은?
+
+```cpp
+Child me(2);
+```
+
+라고 적었을 때,
+
+`Child`에는 생성자를 따로 안 썼지만!  
+자동으로 `Parent(int x)`가 호출돼서 `x = 2`가 되는 거예요.
+
+---
+
+### 🎯 `using Parent::Parent;`이 없었으면?
+
+```cpp
+class Child : public Parent {
+    // 아무 생성자도 없음!
+};
+```
+
+이 상태에서는 아래 코드가 **에러**나요:
+```cpp
+Child me(2); // Parent에는 int를 받는 생성자가 있지만,
+             // Child에는 기본 생성자가 없으므로 컴파일 에러!
+```
+
+즉, 자식 클래스는 부모 생성자를 "자동"으로 상속받지 않아요.  
+하지만 `using Parent::Parent;`를 쓰면 그걸 "자동으로 쓸 수 있게 해주는" 거죠!
+
+---
+
+### 🧃 비유로 쉽게 말하면…
+
+- **부모가 레시피(생성자)를 만들었어요.**
+- 자식은 직접 레시피를 안 만들었어요.
+- `using Parent::Parent;` 덕분에 **부모의 레시피를 빌려서 요리를 할 수 있게 된 거예요!**
+
+---
+
+### ✅ 결과
+
+```cpp
+Child me(2);   // 부모 생성자 사용해서 x = 2
+me.Pr();       // x 값을 출력하니까 → 결과는 2
+```
+
+---
+
+### 🔚 최종 정리
+
+| 문법 | 설명 |
+|------|------|
+| `using Parent::Parent;` | 부모의 생성자를 자식 클래스에서 사용할 수 있게 해줌 |
+| 왜 필요할까? | 자식 클래스에 따로 생성자를 안 써도 부모 생성자 사용 가능 |
+| 효과는? | 코드가 짧아지고, 중복 작성 안 해도 돼서 편리함 |
+
+---
+
+더 어려운 예시나, 기본 생성자/복사 생성자도 포함된 설명 원하시나요? 😊
+
 ```
 #include <iostream>
 class Parent {
