--- a/학습/스코프해석연산자.md
+++ b/학습/스코프해석연산자.md
@@ -63,6 +63,7 @@ int main() {
 | 클래스 멤버 정의 | `ClassName::member` | 클래스 외부에서 멤버 정의 |
 | 네임스페이스 사용 | `namespace::item` | 네임스페이스 안에 정의된 항목 사용 |
 
+틀린사용법 : class Child :: public Parent 
 ---
 
 필요할 때마다 **"이건 이 범위(scope)에 있는 거야"** 하고 정확히 지정해주는 역할을 한다고 기억하면 됩니다!
