--- a/new/우주선연산자.md
+++ b/new/우주선연산자.md
@@ -71,5 +71,89 @@ int main() {
 ```
 
 ---
+좋은 질문입니다!  
+**우주선 연산자 `<=>`**는 C++20에서 도입된 **자동 비교 연산자 생성 기능**으로, 주로 **클래스 간의 정렬, 비교 연산자 자동 구현**에 사용됩니다.
 
-궁금한 점이나, 사용자 정의 타입에서의 정렬 활용법 등 더 알아보고 싶은 게 있다면 말씀 주세요!
+---
+
+### ✅ 대표적인 사용 사례 3가지
+
+---
+
+#### 1. **사용자 정의 타입의 정렬 지원**
+
+```cpp
+#include <iostream>
+#include <compare>
+#include <vector>
+#include <algorithm>
+
+struct Point {
+    int x, y;
+    auto operator<=>(const Point&) const = default; // 자동 비교
+};
+
+int main() {
+    std::vector<Point> points = {{1, 2}, {0, 5}, {3, 1}};
+    std::sort(points.begin(), points.end()); // < 연산자 자동 생성됨
+
+    for (const auto& p : points)
+        std::cout << "(" << p.x << ", " << p.y << ")\n";
+}
+```
+
+> `operator<=>`를 `= default`로 정의하면 `<`, `<=`, `>`, `>=`, `==`, `!=`이 모두 자동 생성됩니다.  
+정렬에 매우 유용합니다.
+
+---
+
+#### 2. **간결한 비교 로직 작성**
+
+```cpp
+#include <iostream>
+#include <compare>
+
+int main() {
+    int a = 10, b = 20;
+    auto result = a <=> b;
+
+    if (result < 0)
+        std::cout << "a < b\n";
+    else if (result == 0)
+        std::cout << "a == b\n";
+    else
+        std::cout << "a > b\n";
+}
+```
+
+> 복잡한 if 문 없이도 세 방향 비교를 간결하게 표현할 수 있습니다.
+
+---
+
+#### 3. **복잡한 구조체의 비교 연산자 간소화**
+
+```cpp
+struct Person {
+    std::string name;
+    int age;
+
+    auto operator<=>(const Person&) const = default;
+};
+```
+
+> 기존에는 `operator<`, `operator==` 등을 모두 일일이 작성해야 했지만,  
+C++20 이후에는 **한 줄로 자동 비교 연산자 정의**가 가능해져 유지보수가 쉬워집니다.
+
+---
+
+### ✳️ 요약
+
+| 사용 사례 | 효과 |
+|-----------|------|
+| 정렬이 필요한 클래스 | `<` 등 비교 연산자 자동 생성 |
+| 간단한 비교 | 세 방향 결과로 `-1`, `0`, `1` 표현 가능 |
+| 코드 간결화 | 반복적인 연산자 정의 생략 가능 |
+
+---
+
+필요하시면 우주선 연산자를 사용하는 수업 예제나 실습도 만들어드릴 수 있어요!
