--- a/book/06.md
+++ b/book/06.md
@@ -38,9 +38,28 @@
 - **스트림 라이브러리**:  
   - `<fstream>` 헤더 파일을 포함하여 파일 입출력 기능을 사용합니다.
 - **주요 클래스**:  
+  - **ofstream**: 파일 출력(쓰기) 스트림. 
+```
+#include <fstream>
+
+int main() {
+    std::ofstream("my.txt") << 11 << 12;
+    return 0;
+}
+```
   - **ifstream**: 파일 입력(읽기) 스트림.
-  - **ofstream**: 파일 출력(쓰기) 스트림.
-  - **fstream**: 입출력 모두 가능한 스트림.
+```
+#include <fstream>
+#include <iostream>
+using namespace std;
+
+int main() {
+    int a, b;
+    ifstream("my.txt") >> a >> b;
+    cout << a + b;
+}
+``` 
+    - **fstream**: 입출력 모두 가능한 스트림.
 - **기본 작업**:  
   - 파일 열기, 읽기/쓰기, 파일 닫기 등을 수행합니다.
 
