--- a/book/06.md
+++ b/book/06.md
@@ -43,7 +43,7 @@
 #include <fstream>
 
 int main() {
-    std::ofstream("my.txt") << 11 << 12;
+    std::ofstream("my.txt") << 11 <<' ' << 22;
     return 0;
 }
 ```
