--- a/book/06.md
+++ b/book/06.md
@@ -25,6 +25,23 @@
   - 오류 상황을 감지하면 `throw`를 사용해 예외 객체를 던집니다.
 - **예외 종류**:  
   - 표준 라이브러리의 예외(`std::exception` 등)와 사용자 정의 예외를 활용할 수 있습니다.
+ ```
+#include <fstream>
+#include <iostream>
+#include <stdexcept>
+using namespace std;
+
+int main() {
+    try {
+        ofstream out("my.txt");
+        if (!out) throw runtime_error("파일을 열 수 없습니다.");
+        out << "11\n22";
+    } catch (const exception& e) {
+        cerr << "오류 발생: " << e.what() << endl;
+    }
+}
+```
+  
 
 ### 2. 네임스페이스 (Namespace)
 - **개념 및 목적**:  
