--- a/book/10.md
+++ b/book/10.md
@@ -1,7 +1,3 @@
-다음은 **10주차: LightSQL – 경량 SQL 라이브러리 활용** 강의를 위한 노트 예시입니다.
-
----
-
 ## 강의목표
 - **LightSQL 라이브러리 이해**: LightSQL의 개념과 특징을 이해하고, C++에서 경량 SQL 데이터베이스 연동을 위한 기본 사용법을 익힙니다.
 - **기본 데이터베이스 연동**: LightSQL을 이용해 데이터베이스 연결, 테이블 생성, 데이터 삽입, 조회 등 기본적인 SQL 작업을 수행할 수 있습니다.
@@ -45,58 +41,78 @@
 
 ```cpp
 #include <iostream>
-#include <LightSQL/LightSQL.h>  // 가상의 LightSQL 헤더 파일
-#include <vector>
-#include <map>
+#include "sqlite3.h"    // 진짜 sqlite3 라이브러리 사용
+#include <string>
 using namespace std;
 
 int main() {
-    // 1. 데이터베이스 연결 (sample.db 파일 생성 및 연결)
-    LightSQL::Database db("sample.db");
-    if (!db.open()) {
-        cerr << "데이터베이스 연결 실패: sample.db" << endl;
+    sqlite3* db;            // 데이터베이스 객체
+    char* errMsg = nullptr; // 에러 메시지 포인터
+    int rc;                 // 리턴 코드
+
+    // 1. 데이터베이스 연결 (또는 파일 생성)
+    rc = sqlite3_open("sample.db", &db);
+    if (rc) {
+        cerr << "데이터베이스 열기 실패: " << sqlite3_errmsg(db) << endl;
+        sqlite3_close(db);
         return 1;
     }
-    
-    // 2. 테이블 생성: Users 테이블 (ID, Name, Age)
-    string createTableQuery = 
+
+    // 2. 테이블 생성
+    const char* createTableQuery =
         "CREATE TABLE IF NOT EXISTS Users ("
         "ID INTEGER PRIMARY KEY AUTOINCREMENT, "
         "Name TEXT, "
         "Age INTEGER);";
-    if (!db.execute(createTableQuery)) {
-        cerr << "테이블 생성 실패" << endl;
-        db.close();
+
+    rc = sqlite3_exec(db, createTableQuery, nullptr, nullptr, &errMsg);
+    if (rc != SQLITE_OK) {
+        cerr << "테이블 생성 실패: " << errMsg << endl;
+        sqlite3_free(errMsg);
+        sqlite3_close(db);
         return 1;
     }
-    
-    // 3. 데이터 삽입: Users 테이블에 샘플 데이터 추가
-    string insertQuery = 
+
+    // 3. 데이터 삽입
+    const char* insertQuery =
         "INSERT INTO Users (Name, Age) VALUES "
         "('Alice', 30), "
         "('Bob', 25);";
-    if (!db.execute(insertQuery)) {
-        cerr << "데이터 삽입 실패" << endl;
-        db.close();
+
+    rc = sqlite3_exec(db, insertQuery, nullptr, nullptr, &errMsg);
+    if (rc != SQLITE_OK) {
+        cerr << "데이터 삽입 실패: " << errMsg << endl;
+        sqlite3_free(errMsg);
+        sqlite3_close(db);
         return 1;
     }
-    
-    // 4. 데이터 조회: Users 테이블의 모든 데이터를 선택
-    string selectQuery = "SELECT * FROM Users;";
-    vector<map<string, string>> results = db.query(selectQuery);
-    
-    // 조회 결과 출력
-    cout << "Users 테이블 데이터:" << endl;
-    for (const auto &row : results) {
-        // 각 행은 키:값 형태의 map으로 반환됨
-        cout << "ID: " << row.at("ID") 
-             << ", Name: " << row.at("Name") 
-             << ", Age: " << row.at("Age") << endl;
+
+    // 4. 데이터 조회
+    const char* selectQuery = "SELECT * FROM Users;";
+    sqlite3_stmt* stmt;
+
+    rc = sqlite3_prepare_v2(db, selectQuery, -1, &stmt, nullptr);
+    if (rc != SQLITE_OK) {
+        cerr << "쿼리 준비 실패: " << sqlite3_errmsg(db) << endl;
+        sqlite3_close(db);
+        return 1;
     }
-    
-    // 5. 데이터베이스 연결 종료
-    db.close();
-    
+
+    cout << "Users 테이블 데이터:" << endl;
+    while (sqlite3_step(stmt) == SQLITE_ROW) {
+        int id = sqlite3_column_int(stmt, 0);
+        const unsigned char* name = sqlite3_column_text(stmt, 1);
+        int age = sqlite3_column_int(stmt, 2);
+
+        cout << "ID: " << id
+            << ", Name: " << (name ? reinterpret_cast<const char*>(name) : "NULL")
+            << ", Age: " << age << endl;
+    }
+
+    // 5. 리소스 해제
+    sqlite3_finalize(stmt);
+    sqlite3_close(db);
+
     return 0;
 }
 ```
