--- a/book/10.md
+++ b/book/10.md
@@ -30,7 +30,82 @@
 - **예외 처리**
   - 데이터베이스 작업 중 발생할 수 있는 오류에 대해 적절한 예외 처리(try-catch)를 적용합니다.
 
-### 3. 간단한 데이터베이스 연동 예제
+
+### 3. C++에서 SQLite3 사용하기 (Visual Studio 기준)  
+**1. SQLite 다운로드**
+
+1. 공식 사이트 접속  
+👉 [https://www.sqlite.org/download.html](https://www.sqlite.org/download.html)
+
+2. 다음 파일을 다운로드합니다:
+- `sqlite-amalgamation-xxxxxx.zip` (※ `xxxxxx`는 버전 번호)
+  - 안에 `sqlite3.h`, `sqlite3.c` 파일이 들어 있습니다.
+- `sqlite-dll-win64-x64-xxxxxx.zip` (64비트용) 또는  
+  `sqlite-dll-win32-x86-xxxxxx.zip` (32비트용)
+  - 안에 `sqlite3.dll` 파일이 들어 있습니다.
+
+**※ 꼭 Windows용 DLL 파일과 amalgamation 파일 둘 다 받아야 합니다!**
+
+---
+
+**2. 필요한 파일 정리**
+다운로드한 압축 파일을 풀면 다음 파일이 필요합니다:
+- `sqlite3.h`
+- `sqlite3.c`
+- `sqlite3.dll`
+
+---
+
+**3. 프로젝트에 파일 복사
+
+1. Visual Studio에서 C++ 프로젝트를 생성합니다.  
+   (예: `MyProject`라는 이름으로)
+
+2. 아래 파일을 **프로젝트 폴더**에 복사합니다:
+- `sqlite3.h`
+- `sqlite3.c`
+- `sqlite3.dll`  
+
+   (예: `C:\Users\...\source\repos\MyProject\MyProject\`)
+
+3. Visual Studio에서 **프로젝트**에 파일 추가:
+   - 솔루션 탐색기 → **프로젝트 이름**에 오른쪽 클릭 →  
+     **추가(Add)** → **기존 항목(Existing Item)** →  
+     `sqlite3.h`와 `sqlite3.c`를 선택 → **확인**
+
+4. `sqlite3.dll` 파일은 별도로 추가할 필요 없습니다.  
+   대신, 실행할 때 **빌드 폴더(Debug 또는 Release 폴더)** 안에 복사해 둡니다.  
+   (exe 파일과 같은 폴더에 있어야 정상 실행됩니다.)
+
+---
+
+**4. 코드 작성** **소스 코드 상단에 추가:**
+```cpp
+#include "sqlite3.h"
+```
+이후 sqlite3 함수를 자유롭게 사용할 수 있습니다.
+
+---
+
+**5. 요약 흐름**
+```
+1. 공식 사이트에서 sqlite3 다운로드
+2. sqlite3.h, sqlite3.c, sqlite3.dll 준비
+3. 프로젝트 폴더에 복사
+4. sqlite3.h, sqlite3.c는 프로젝트에 추가
+5. sqlite3.dll은 실행 파일 옆에 놓기
+6. #include "sqlite3.h" 해서 사용
+```
+
+---
+
+**📌 추가 주의사항**
+- Visual Studio에서 **x64** 설정 시 `sqlite-dll-win64-x64-xxxxxx.zip`을 받아야 합니다.
+- Visual Studio에서 **x86** 설정 시 `sqlite-dll-win32-x86-xxxxxx.zip`을 받아야 합니다.
+- `sqlite3.c`는 **컴파일 대상**에 추가되어야 합니다.
+
+
+### 4. 간단한 데이터베이스 연동 예제
 - **예제 시나리오**
   - `"sample.db"` 파일에 연결 후, `Users` 테이블을 생성합니다.
   - `Users` 테이블에 사용자 정보(예: 이름, 나이)를 삽입하고, 데이터를 조회하여 출력합니다.
