--- a/book/10.md
+++ b/book/10.md
@@ -40,33 +40,25 @@
 2. 다음 파일을 다운로드합니다:
 - `sqlite-amalgamation-xxxxxx.zip` (※ `xxxxxx`는 버전 번호)
   - 안에 `sqlite3.h`, `sqlite3.c` 파일이 들어 있습니다.
-- `sqlite-dll-win64-x64-xxxxxx.zip` (64비트용) 또는  
-  `sqlite-dll-win32-x86-xxxxxx.zip` (32비트용)
+- `sqlite-dll-win64-x64-xxxxxx.zip` (64비트용) 또는  `sqlite-dll-win32-x86-xxxxxx.zip` (32비트용)
   - 안에 `sqlite3.dll` 파일이 들어 있습니다.
 
 **※ 꼭 Windows용 DLL 파일과 amalgamation 파일 둘 다 받아야 합니다!**
 
----
-
-**2. 필요한 파일 정리**
-다운로드한 압축 파일을 풀면 다음 파일이 필요합니다:
-- `sqlite3.h`
-- `sqlite3.c`
-- `sqlite3.dll`
+다운로드한 압축 파일을 풀면 다음 파일이 필요합니다: `sqlite3.h`  `sqlite3.c`  `sqlite3.dll`
 
 ---
 
-**3. 프로젝트에 파일 복사
+**2. 프로젝트에 파일 복사
 
-1. Visual Studio에서 C++ 프로젝트를 생성합니다.  
-   (예: `MyProject`라는 이름으로)
+1. Visual Studio에서 C++ 프로젝트를 생성합니다.  (예: `Project1`라는 이름으로)
 
 2. 아래 파일을 **프로젝트 폴더**에 복사합니다:
-- `sqlite3.h`
+- `sqlite3.h` 
 - `sqlite3.c`
 - `sqlite3.dll`  
 
-   (예: `C:\Users\...\source\repos\MyProject\MyProject\`)
+   (예: `C:\Users\...\source\repos\Project1\`)
 
 3. Visual Studio에서 **프로젝트**에 파일 추가:
    - 솔루션 탐색기 → **프로젝트 이름**에 오른쪽 클릭 →  
@@ -79,7 +71,7 @@
 
 ---
 
-**4. 코드 작성** **소스 코드 상단에 추가:**
+**3. 코드 작성** **소스 코드 상단에 추가:**
 ```cpp
 #include "sqlite3.h"
 ```
@@ -87,7 +79,7 @@
 
 ---
 
-**5. 요약 흐름**
+**4. 요약 흐름**
 ```
 1. 공식 사이트에서 sqlite3 다운로드
 2. sqlite3.h, sqlite3.c, sqlite3.dll 준비
