--- a/book/10.md
+++ b/book/10.md
@@ -64,6 +64,7 @@
    - 솔루션 탐색기 → **프로젝트 이름**에 오른쪽 클릭 →  
      **추가(Add)** → **기존 항목(Existing Item)** →  
      `sqlite3.h`와 `sqlite3.c`를 선택 → **확인**
+![image](https://github.com/user-attachments/assets/8544e3c4-c760-44db-86bb-b5cd5c1066ac)
 
 4. `sqlite3.dll` 파일은 별도로 추가할 필요 없습니다.  
    대신, 실행할 때 **빌드 폴더(Debug 또는 Release 폴더)** 안에 복사해 둡니다.  
@@ -183,6 +184,8 @@ int main() {
     return 0;
 }
 ```
+## 실행결과
+![image](https://github.com/user-attachments/assets/cd130dba-2ed3-433e-82f0-5fde8c0e3f1d)
 
 **예제 설명**:
 - **데이터베이스 연결**:  
