--- a/book/11.md
+++ b/book/11.md
@@ -81,3 +81,48 @@ int main()
 ---
 
 이번 강의에서는 다양한 그래픽스 라이브러리의 특징과 기본적인 그래픽 창 생성, 도형 그리기 과정을 실습합니다. 예제 코드를 직접 작성 및 실행하면서 그래픽스 프로그래밍의 기초 개념과 렌더링 사이클을 체험해 보시기 바랍니다.
+
+```
+// 무지게 삼각형
+#include <SFML/Graphics.hpp>
+
+int main()
+{
+    // 1. 그래픽 창 생성: 800x600 크기의 창 생성
+    sf::RenderWindow window(sf::VideoMode(800, 600), "Rainbow Triangle");
+
+    // 2. 삼각형 도형 생성
+    sf::VertexArray triangle(sf::Triangles, 3); // 삼각형 3개 꼭짓점
+
+    // 꼭짓점 설정 (위치 + 색상)
+    triangle[0].position = sf::Vector2f(400, 100); // 위쪽
+    triangle[0].color = sf::Color::Red;            // 빨강
+
+    triangle[1].position = sf::Vector2f(200, 500); // 왼쪽 아래
+    triangle[1].color = sf::Color::Green;          // 초록
+
+    triangle[2].position = sf::Vector2f(600, 500); // 오른쪽 아래
+    triangle[2].color = sf::Color::Blue;           // 파랑
+
+    // 3. 메인 이벤트 루프
+    while (window.isOpen())
+    {
+        sf::Event event;
+        while (window.pollEvent(event))
+        {
+            if (event.type == sf::Event::Closed)
+                window.close();
+        }
+
+        // 4. 렌더링 사이클
+        window.clear(sf::Color::Black);   // 창 초기화 (검은 배경)
+        window.draw(triangle);            // 삼각형 그리기
+        window.display();                 // 화면에 출력
+    }
+
+    return 0;
+}
+
+```
+![image](https://github.com/user-attachments/assets/f61354db-f012-4bca-b8ab-7477683ab7a9)
+
