--- a/book/12.md
+++ b/book/12.md
@@ -47,7 +47,7 @@
 ## 실전예제
 
 ### 예제: 이미지 읽기, 그레이스케일 변환 및 출력
-
+// Nuget에서 OpenCV4.2로 검색하고 설치를 하세요.
 ```cpp
 #include <opencv2/opencv.hpp>
 #include <iostream>
@@ -57,7 +57,7 @@ using namespace std;
 
 int main() {
     // 1. 이미지 파일 읽기
-    Mat img = imread("sample.jpg");  // sample.jpg 파일을 읽어옴
+    Mat img = imread("sample.jpg");  // sample.jpg 파일을 읽어옴 <- 반드시 확인하세요.
     if (img.empty()) {
         cerr << "이미지를 불러올 수 없습니다." << endl;
         return -1;
@@ -77,6 +77,7 @@ int main() {
     return 0;
 }
 ```
+![image](https://github.com/user-attachments/assets/e2d7fd89-e6ce-4125-afab-bd51ec57ec1c)
 
 **예제 설명**:
 - **이미지 읽기**: `imread()` 함수를 통해 "sample.jpg" 파일을 읽어 `Mat` 객체로 저장합니다. 파일 경로가 올바르지 않거나 파일이 없는 경우, 에러 메시지를 출력합니다.
