--- a/book/09.md
+++ b/book/09.md
@@ -118,6 +118,29 @@ int main() {
   - 문자열을 저장한 리스트를 range-based for 문으로 간단하게 순회하며 출력합니다.
 - **맵**:  
   - 키-값 쌍을 저장한 후, 이터레이터를 이용하여 각 원소를 출력합니다.
+ 
+### Vector 출력하는 다양한 방법들
+```
+#include <iostream>
+#include <vector>
+#include <algorithm>
+using namespace std;
+
+int main() {
+    vector<int> v = { 1, 3, 2, 5, 4 };
+    for (auto i = 0; i < v.size(); i++) cout << v[i] << ' ';    cout << endl;
+    for (auto i : v) cout << i << ' '; cout << endl;
+    // 벡터 출력 (이터레이터 사용)
+    for (auto it = v.begin(); it != v.end(); ++it) cout << *it << " "; cout << endl;
+    // 벡터 출력 (for_each 사용), 람다함수 // #include<algorithm
+    for_each(v.begin(), v.end(), [](int x) { cout << x << ' '; }); cout << endl;
+    // 전통적인 포인터 사용
+    const int* p = v.data(); // v.data()== &v[0] == v[0]의 주소
+    for (size_t i = 0; i < v.size(); ++i)  cout << *(p + i) << ' ';  cout << endl;
+    // ostream 사용
+    copy(v.begin(), v.end(), ostream_iterator<int>(cout, " ")); cout << endl;
+}
+```
 
 ---
 
