--- a/book/13.md
+++ b/book/13.md
@@ -40,8 +40,9 @@
   - 변수 초기화 → 입력 데이터 제공 → 세션 실행 → 결과 추출 및 출력.
 
 ---
+## [실전예제1: DNN 기반의 얼굴 추출](https://github.com/jcshim/cpp/blob/main/face/fc_dnn_res.md)
 
-## 실전예제
+## 실전예제2
 
 다음 예제는 TensorFlow C++ API를 이용하여 **간단한 신경망 (y = X * W + b)** 모델을 구성하고, 입력 데이터를 통해 출력을 계산하는 예제입니다.
 
