--- a/book/12.md
+++ b/book/12.md
@@ -17,13 +17,10 @@
 ## 강의내용
 
 ### 1. OpenCV 설치 및 환경 구성
-- **설치 방법**
-  - OpenCV 공식 웹사이트 또는 패키지 관리자를 통해 라이브러리를 다운로드합니다.
-  - CMake를 사용하여 빌드하거나, 미리 컴파일된 바이너리를 설치할 수 있습니다.
-- **IDE 연동**
-  - Visual Studio, Code::Blocks, CLion 등 주요 IDE에서 OpenCV 라이브러리를 포함하고 링크 설정을 합니다.
-  - 프로젝트 설정에서 include 디렉토리와 라이브러리 디렉토리를 추가합니다.
-
+- **설치 및 IDE 연동**
+  - Visual Studio, IDE에서 OpenCV 라이브러리를 포함하고 링크 설정을 합니다.
+  - Nuget에서 "opencv4.2"를 설치합니다.
+ 
 ### 2. OpenCV 기본 함수 사용법
 - **이미지 읽기와 표시**
   - `cv::imread()`: 이미지 파일을 읽어 `cv::Mat` 객체로 반환합니다.
@@ -37,6 +34,33 @@
   - 프레임 단위 처리 및 실시간 영상 출력.
 
 ### 3. 응용 예제
+- **초록색 사각형 그리기**
+```
+#include <opencv2/opencv.hpp>
+
+int main() {
+    // 1. 400x400 크기의 검은색 배경 이미지 생성
+    cv::Mat image = cv::Mat::zeros(400, 400, CV_8UC3);
+
+    // 2. 사각형의 시작점(왼쪽 위)과 끝점(오른쪽 아래)
+    cv::Point pt1(100, 100);
+    cv::Point pt2(300, 300);
+
+    // 3. 색상 (B, G, R) - 파란색
+    cv::Scalar color(0, 255, 0);
+
+    // 4. 두께 (음수: 채우기, 양수: 테두리 두께)
+    int thickness = -1;
+
+    // 5. 사각형 그리기
+    cv::rectangle(image, pt1, pt2, color, thickness);
+
+    // 6. 결과 이미지 표시
+    cv::imshow("Rectangle", image);
+    cv::waitKey(0);
+    return 0;
+}
+``` 
 - **이미지 처리 예제**
   - 이미지 파일을 읽어 그레이스케일로 변환 후, 원본 이미지와 함께 출력하는 예제.
 - **영상 처리 예제 (선택)**
