--- a/상수.md
+++ b/상수.md
@@ -117,4 +117,131 @@ const string& getTitle() const;
 
 ---
 
-필요하시면 `const` 관련 퀴즈나 실습 예제도 만들어드릴 수 있습니다.
+좋습니다! `const` 키워드를 정확히 이해했는지 확인하고 연습할 수 있도록 **퀴즈 5문제**와 **실습 예제 2개**를 아래에 제공합니다.
+
+---
+
+## 🧠 \[1] `const` 퀴즈 (OX 및 선택형)
+
+### ✅ 문제 1. OX 퀴즈
+
+```cpp
+const int a = 10;
+a = 20;
+```
+
+이 코드는 컴파일 오류가 발생한다. (O/X)
+
+---
+
+### ✅ 문제 2. OX 퀴즈
+
+```cpp
+void print(const string& s) {
+    s += "!";
+}
+```
+
+이 코드는 정상적으로 컴파일된다. (O/X)
+
+---
+
+### ✅ 문제 3. 선택형
+
+다음 중 **포인터가 가리키는 값**은 변경할 수 있지만 \*\*포인터 자체는 변경할 수 없는 선언은?
+A. `const int* p`
+B. `int* const p`
+C. `const int* const p`
+D. `int const* const p`
+
+---
+
+### ✅ 문제 4. OX 퀴즈
+
+```cpp
+class Test {
+    int x;
+public:
+    int getX() const {
+        return x;
+    }
+};
+```
+
+`getX()` 함수 안에서는 `x` 값을 변경할 수 있다. (O/X)
+
+---
+
+### ✅ 문제 5. 선택형
+
+다음 함수 선언 중에서 가장 효율적인 문자열 출력 함수는?
+
+A. `void show(string name)`
+B. `void show(string& name)`
+C. `void show(const string& name)`
+D. `void show(const string name)`
+
+---
+
+## ✅ 정답
+
+1. O
+2. X
+3. B
+4. X
+5. C
+
+---
+
+## 🧪 \[2] 실습 예제
+
+---
+
+### 🌟 실습 예제 1: `const` 참조를 활용한 안전한 출력 함수
+
+```cpp
+#include <iostream>
+#include <string>
+using namespace std;
+
+void printMessage(const string& msg) {
+    // msg += "!"; // 주석 해제 시 에러 발생
+    cout << "Message: " << msg << endl;
+}
+
+int main() {
+    string greeting = "Hello";
+    printMessage(greeting);
+    return 0;
+}
+```
+
+✔️ **목표**: `const` 참조로 전달한 인자는 함수 내에서 수정이 불가능함을 확인
+
+---
+
+### 🌟 실습 예제 2: `const` 멤버 함수로 클래스 안전성 확보
+
+```cpp
+#include <iostream>
+using namespace std;
+
+class Rectangle {
+    int width, height;
+public:
+    Rectangle(int w, int h) : width(w), height(h) {}
+
+    int area() const {
+        // width++; // 주석 해제 시 에러 발생
+        return width * height;
+    }
+};
+
+int main() {
+    const Rectangle r(5, 4);
+    cout << "면적: " << r.area() << endl;
+    return 0;
+}
+```
+
+✔️ **목표**: `const` 객체는 `const` 멤버 함수만 호출 가능하며, 내부 상태를 변경하지 않음을 확인
