--- a/book/13.md
+++ b/book/13.md
@@ -1,123 +1,188 @@
-다음은 **13주차: Deep Learning – C++에서의 딥러닝 입문** 강의를 위한 노트 예시입니다.
+## 📘 13주차: Deep Learning – C++에서의 딥러닝 입문 (OpenCV + ONNX 활용)
 
 ---
 
-## 강의목표
-- **딥러닝 라이브러리 이해**: C++ 환경에서 TensorFlow C++ API와 같은 딥러닝 라이브러리의 특징과 사용법을 이해합니다.
-- **기본 신경망 구성 이해**: 단층 또는 간단한 다층 신경망의 구성 요소(입력, 가중치, 편향, 활성화 함수 등)를 이해하고 구현해봅니다.
-- **실습을 통한 적용**: C++에서 딥러닝 모델을 정의, 초기화 및 실행하는 과정을 실습하여 딥러닝 모델의 동작 원리를 체험합니다.
+### ✅ 강의목표
+
+* **ONNX 딥러닝 모델 이해**: 사전 학습된 ONNX 모델을 C++에서 불러와 사용하는 방법을 익힙니다.
+* **OpenCV DNN 모듈 활용**: OpenCV의 `dnn` 모듈을 이용하여 딥러닝 모델을 로드하고 추론합니다.
+* **이미지 기반 숫자 인식 실습**: MNIST 숫자 이미지를 입력하여 C++ 코드로 추론 결과를 얻는 전체 흐름을 실습합니다.
 
 ---
 
-## 강의요약
-이번 강의에서는 C++ 기반 딥러닝 라이브러리(예: TensorFlow C++ API)를 활용하여 간단한 신경망을 구현하는 방법을 다룹니다. 딥러닝 모델의 기본 구성 요소(입력, 가중치, 편향, 연산)를 정의하고, TensorFlow의 연산 그래프를 생성 및 실행하는 과정을 통해 신경망의 추론 과정을 실습합니다. 또한, C++에서 딥러닝 모델을 사용하기 위한 환경 구성과 기본적인 세션 실행 방법도 학습합니다.
+### ✅ 강의요약
+
+이번 강의에서는 Visual Studio와 OpenCV 4.2 환경에서 C++을 사용하여 사전 학습된 딥러닝 모델(`mnist-8.onnx`)을 불러오고, 숫자 이미지를 입력받아 추론하는 과정을 학습합니다. 이미지 전처리, ONNX 모델 로딩, OpenCV DNN API 사용법, 추론 결과 출력까지의 전체 파이프라인을 실습합니다. 이 과정은 C++ 환경에서 AI 응용을 직접 체험해보는 좋은 입문 예제입니다.
 
 ---
 
-## 강의내용
+### ✅ 강의내용
 
-### 1. C++ 기반 딥러닝 라이브러리 소개
-- **TensorFlow C++ API**:  
-  - Python API에 비해 상대적으로 낮은 수준의 그래프 조작을 제공하며, 고성능 환경에서 활용됩니다.
-  - 모델의 정의, 변수 초기화, 세션 생성 및 실행 등 딥러닝 모델의 주요 과정을 C++ 코드로 작성할 수 있습니다.
-- **다른 라이브러리**:  
-  - tiny-dnn, Caffe 등 다양한 C++ 딥러닝 라이브러리가 있으나, 이번 강의에서는 TensorFlow C++ API를 중심으로 다룹니다.
+#### 1. 사용 기술 및 라이브러리
 
-### 2. 환경 설정 및 기본 사용법
-- **환경 구성**:  
-  - TensorFlow C++ 라이브러리 빌드 및 링크, 헤더 파일 포함 등 개발 환경 설정.
-- **기본 구성요소**:  
-  - **연산 그래프**: 모델의 구조를 정의하는 노드(Node)와 연산(Operation)들.
-  - **세션(ClientSession)**: 그래프를 실행하고 결과를 추출하는 객체.
-  - **텐서(Tensor)**: 데이터를 저장하는 다차원 배열로, 입력 및 출력 데이터를 전달.
+* **OpenCV 4.2 DNN 모듈**:
 
-### 3. 간단한 신경망 구현
-- **모델 구성**:  
-  - **입력**: Placeholder를 사용해 입력 데이터를 받음 (예: 1×2 행렬).
-  - **가중치/편향**: Variable을 사용하여 학습 가능한 매개변수 정의.
-  - **연산**: MatMul, Add 등의 연산을 통해 신경망의 예측값 계산.
-- **실행 흐름**:  
-  - 변수 초기화 → 입력 데이터 제공 → 세션 실행 → 결과 추출 및 출력.
+  * ONNX, Caffe, TensorFlow 등 다양한 딥러닝 프레임워크의 모델을 C++에서 불러올 수 있음
+  * `blobFromImage`, `readNetFromONNX`, `net.forward()` 등의 함수 사용
+
+* **ONNX 모델**:
+
+  * Python에서 학습된 모델을 ONNX 포맷으로 변환해 재사용 가능
+  * MNIST 숫자 분류 모델(`mnist-8.onnx`) 활용
 
 ---
-## [실전예제1: DNN 기반의 얼굴 추출](https://github.com/jcshim/cpp/blob/main/face/fc_dnn_res.md)
 
-## 실전예제2
+#### 2. 실습 환경 설정
 
-다음 예제는 TensorFlow C++ API를 이용하여 **간단한 신경망 (y = X * W + b)** 모델을 구성하고, 입력 데이터를 통해 출력을 계산하는 예제입니다.
+* Visual Studio 2022 이상 (빈 콘솔 앱)
+* NuGet 패키지 관리자로 OpenCV 설치 (`opencv.windows` 또는 `opencv4.2`)
+* 모델 및 테스트 이미지 파일 준비:
+
+  * `mnist-8.onnx`: [ONNX 모델 다운로드](https://github.com/onnx/models/raw/main/vision/classification/mnist/model/mnist-8.onnx)
+  * `8.png`: 28x28 픽셀의 흑백 숫자 이미지
+
+---
+
+#### 3. 전체 코드 흐름 설명
+
+* **모델 불러오기**:
+  `Net net = readNetFromONNX("d:/mnist-8.onnx");`
+
+* **입력 이미지 처리**:
+
+  * 흑백으로 로드 (`IMREAD_GRAYSCALE`)
+  * 28×28로 리사이즈
+  * 0\~1 정규화 (`img.convertTo(..., 1.0 / 255)`)
+  * `blobFromImage()`를 이용한 입력 포맷 변환
+
+* **추론 및 결과 해석**:
+
+  * `net.setInput()` → `net.forward()`
+  * `minMaxLoc()`로 가장 확률 높은 숫자 출력
+
+---
+
+### ✅ 실전예제
+
+#### \[실전예제] 숫자 8 인식: OpenCV + ONNX 모델 추론
 
 ```cpp
-#include "tensorflow/cc/client/client_session.h"
-#include "tensorflow/cc/ops/standard_ops.h"
-#include "tensorflow/core/framework/tensor.h"
-#include "tensorflow/core/platform/env.h"
+#include <opencv2/opencv.hpp>
+#include <opencv2/dnn.hpp>
 #include <iostream>
-
-using namespace tensorflow;
-using namespace tensorflow::ops;
+using namespace cv;
+using namespace dnn;
+using namespace std;
 
 int main() {
-    // 1. 연산 그래프 생성
-    Scope root = Scope::NewRootScope();
+    // 모델 경로 및 이미지 경로 설정
+    string modelPath = "D:/mnist-8.onnx";
+    string imagePath = "D:/8.png";
 
-    // 입력 데이터: 1x2 행렬 (예: [1.0, 2.0])
-    auto X = Placeholder(root.WithOpName("X"), DT_FLOAT, Placeholder::Shape({1, 2}));
+    // ONNX 모델 로드
+    Net net = readNetFromONNX(modelPath);
 
-    // 가중치 변수: 2x1 행렬
-    auto W = Variable(root.WithOpName("W"), {2, 1}, DT_FLOAT);
-    // 편향 변수: 1x1 행렬
-    auto b = Variable(root.WithOpName("b"), {1}, DT_FLOAT);
+    // 이미지 로드 및 전처리
+    Mat img = imread(imagePath, IMREAD_GRAYSCALE);
+    if (img.empty()) {
+        cerr << "이미지를 불러올 수 없습니다: " << imagePath << endl;
+        return -1;
+    }
+    resize(img, img, Size(28, 28));
+    img.convertTo(img, CV_32F, 1.0 / 255);
+    Mat blob = blobFromImage(img);  // (1, 1, 28, 28)
 
-    // 초기화 텐서 생성
-    Tensor w_init(DT_FLOAT, TensorShape({2, 1}));
-    auto w_matrix = w_init.matrix<float>();
-    w_matrix(0, 0) = 0.5f;
-    w_matrix(1, 0) = -0.5f;
+    // 입력 및 추론
+    net.setInput(blob);
+    Mat output = net.forward();  // 출력: (1, 10)
 
-    Tensor b_init(DT_FLOAT, TensorShape({1}));
-    auto b_vec = b_init.vec<float>();
-    b_vec(0) = 0.1f;
-
-    // 변수 초기화 연산
-    auto assign_W = Assign(root.WithOpName("assign_W"), W, w_init);
-    auto assign_b = Assign(root.WithOpName("assign_b"), b, b_init);
-
-    // 신경망 연산: y = X * W + b
-    auto matmul = MatMul(root.WithOpName("matmul"), X, W);
-    auto y = Add(root.WithOpName("y"), matmul, b);
-
-    // 2. 세션 생성 및 변수 초기화 실행
-    ClientSession session(root);
-    TF_CHECK_OK(session.Run({assign_W, assign_b}, nullptr));
-
-    // 3. 입력 데이터를 위한 텐서 생성
-    Tensor input(DT_FLOAT, TensorShape({1, 2}));
-    auto input_matrix = input.matrix<float>();
-    input_matrix(0, 0) = 1.0f;
-    input_matrix(0, 1) = 2.0f;
-
-    // 4. 세션 실행: 입력 X에 대한 y의 값을 계산
-    std::vector<Tensor> outputs;
-    TF_CHECK_OK(session.Run({ {X, input} }, {y}, &outputs));
-
-    // 5. 결과 출력
-    auto output_matrix = outputs[0].matrix<float>();
-    std::cout << "신경망 출력: " << output_matrix(0, 0) << std::endl;
+    // 결과 분석
+    Point classId;
+    double confidence;
+    minMaxLoc(output, 0, &confidence, 0, &classId);
+    cout << "예측된 숫자: " << classId.x << " (신뢰도: " << confidence << ")" << endl;
 
     return 0;
 }
 ```
 
-**예제 설명**:
-- **그래프 구성**:  
-  - `Placeholder`를 통해 입력 데이터 X를 정의하고, `Variable`을 통해 가중치(W)와 편향(b)를 생성합니다.
-  - `Assign` 연산을 통해 가중치와 편향을 초기화합니다.
-  - `MatMul`과 `Add` 연산을 이용해 간단한 선형 모델 \( y = X \times W + b \)를 구성합니다.
-- **세션 실행**:  
-  - `ClientSession`을 생성하여 그래프를 실행하고, 입력 데이터 텐서를 제공하여 결과 y를 계산합니다.
-- **결과 출력**:  
-  - 계산된 y의 값을 추출하여 콘솔에 출력합니다.
+---
+
+### ✅ 실행 예시
+
+```
+예측된 숫자: 8 (신뢰도: 0.9983)
+```
 
 ---
 
-이번 강의에서는 TensorFlow C++ API를 활용하여 간단한 신경망 모델을 구현하는 방법을 학습합니다. 예제 코드를 직접 작성하고 실행해보며, C++ 환경에서 딥러닝 모델을 구축하고 추론하는 기본 과정을 체험하시기 바랍니다.
+### ✅ 학습 포인트 정리
+
+| 항목         | 내용                                   |
+| ---------- | ------------------------------------ |
+| 입력 전처리     | 이미지 리사이즈, 정규화, blob 변환               |
+| 모델 로딩      | `readNetFromONNX()`로 ONNX 불러오기       |
+| 추론 및 결과 처리 | `forward()` → `minMaxLoc()`          |
+| 실습 도구      | Visual Studio + OpenCV 4.2 + ONNX 모델 |
+
+# 가장 간단한 인공지는 퍼셉트론(Perceptron) AND 게이트 학습
+```
+// Visual Studio에서 C++로 인공지능 실습을 시작하려면, 
+// 가장 간단하고 직관적인 예제는 퍼셉트론(Perceptron)으로 
+// AND 게이트 학습시키기입니다.
+// 이 예제는 수학도 간단하고, 
+// 외부 라이브러리 없이도 쉽게 구현할 수 있습니다.
+
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+// 간단한 퍼셉트론
+int main() {
+    // 학습 데이터: 입력(x1, x2), 기대 출력
+    vector<vector<int>> inputs = { {0, 0}, {0, 1}, {1, 0}, {1, 1} };
+    vector<int> targets = { 0, 0, 0, 1 }; // AND 게이트 결과
+
+    // 가중치 초기화 (임의)
+    float w1 = 0.0f, w2 = 0.0f;
+    float bias = 0.0f;
+    float lr = 0.1f; // 학습률
+
+    // 학습 반복
+    for (int epoch = 0; epoch < 10; epoch++) {
+        cout << "Epoch " << epoch + 1 << endl;
+
+        for (int i = 0; i < inputs.size(); i++) {
+            int x1 = inputs[i][0];
+            int x2 = inputs[i][1];
+            int target = targets[i];
+
+            // 퍼셉트론 출력 계산
+            float sum = x1 * w1 + x2 * w2 + bias;
+            int output = (sum >= 0.5f) ? 1 : 0;
+
+            // 오차 계산
+            int error = target - output;
+
+            // 가중치 및 바이어스 갱신
+            w1 += lr * error * x1;
+            w2 += lr * error * x2;
+            bias += lr * error;
+
+            // 출력
+            cout << "Input: " << x1 << ", " << x2
+                << " | Target: " << target
+                << " | Output: " << output
+                << " | Error: " << error << endl;
+        }
+
+        cout << "------------" << endl;
+    }
+
+    // 최종 가중치 출력
+    cout << "Final weights: w1=" << w1 << ", w2=" << w2 << ", bias=" << bias << endl;
+
+    return 0;
+}
+```
