--- a/book/13.md
+++ b/book/13.md
@@ -39,8 +39,8 @@
 * 모델 및 테스트 이미지 파일 준비:
 
   * `mnist-8.onnx`: [ONNX 모델 다운로드](https://github.com/onnx/models/blob/main/validated/vision/classification/mnist/model/mnist-8.onnx)
-  * `8.png`: 28x28 픽셀의 흑백 숫자 이미지
-
+  * `8.png`: 28x28 픽셀의 흑백 숫자 이미지 만들거나
+  * 이 github에서 다운로드 
 ---
 
 #### 3. 전체 코드 흐름 설명
