--- a/book/13.md
+++ b/book/13.md
@@ -40,7 +40,7 @@
 
   * `mnist-8.onnx`: [ONNX 모델 다운로드](https://github.com/onnx/models/blob/main/validated/vision/classification/mnist/model/mnist-8.onnx)
   * `8.png`: 28x28 픽셀의 흑백 숫자 이미지 만들거나
-  * 이 github에서 다운로드 [3.png](https://github.com/jcshim/cpp/edit/main/book/3.png)
+  * 이 github에서 다운로드 [8.png](https://github.com/jcshim/cpp/blob/main/book/8.png) [3.png](https://github.com/jcshim/cpp/blob/main/book/3.png)
 ---
 
 #### 3. 전체 코드 흐름 설명
