--- a/book/13.md
+++ b/book/13.md
@@ -35,7 +35,7 @@
 #### 2. 실습 환경 설정
 
 * Visual Studio 2022 이상 (빈 콘솔 앱)
-* NuGet 패키지 관리자로 OpenCV 설치 (`opencv.windows` 또는 `opencv4.2`)
+* NuGet 패키지 관리자로 OpenCV 설치 (`opencv4.2`)
 * 모델 및 테스트 이미지 파일 준비:
 
   * `mnist-8.onnx`: [ONNX 모델 다운로드](https://github.com/onnx/models/blob/main/validated/vision/classification/mnist/model/mnist-8.onnx)
